Changelog
=========

This document contains information about the changes between the different
versions of PyAMF.

.. contents::

0.6 (unreleased)
----------------
- Default to using ``__new__`` for instance creation if available. (Ticket:700)
- Ability to ``unregister_type_alias`` (Ticket:707)
- ``__amf__.proxy`` actually works (Ticket:712)
- Django adapter now uses ``get_all_field_names`` to find model properties
  (Ticket:625)
- Added ``ClassAlias.bases`` and deep class tree support for typed classes
  (Ticket:715)
- ``use_references`` keyword arg has been removed from ``amf3.Encoder.write*``
  (Ticket:713)
- ``ClassAlias.getEncodableAttributes`` now will return a single dict of
  properties (Ticket:714)
- PyAMF Client will raise an exception if the remote gateway returns a service
  error (Ticket:260)
- Fixed a reference bug with unsaved Django model instances. Thanks to wolver
  for the patch and tests (Ticket:691).
- Fixed a small bug in decoding Django relations when declared as static.
  Thanks to wolver for the patch. (Ticket:693)
- Removed ``exceptions`` from all ``Context`` and ``pyamf.util.Indexed*``
  classes (Ticket:660)
- Empty Django relations are now encoded as ``None``, not ``pyamf.Undefined``
  (Ticket:659)
- ``pyamf.ClientType`` removed, as it is not spec compliant (Ticket:651)

0.5.1 (2009-09-19)
------------------
- ``pyamf.register_package`` can now accept a list of classes (Ticket:650)
- Fixed a regression in ``TwistedGateway`` where services would be called
  twice (Ticket:648)
- Fixed a bug with encoding anonymous trait references (Ticket:644)
- Moved ``IndexedCollection`` into ``cpyamf`` (Ticket:424)
- ``amf3.encode_int`` now encodes signed 29bit ints, not unsigned. Thanks
  to gerard for the report, investigation and patch! (Ticket:646)

0.5 (2009-09-07)
----------------
- Added the ability to modify the timezones of dates being de/encoded for
  legacy systems. (Ticket:612)