@@ -8,6 +8,8 @@ versions of PyAMF.
 
 0.6 (unreleased)
 ----------------
+- All ORM adapters will no longer set properties as static attributes
+  (Ticket:677)
 - Default to using ``__new__`` for instance creation if available. (Ticket:700)
 - Ability to ``unregister_type_alias`` (Ticket:707)
 - ``__amf__.proxy`` actually works (Ticket:712)
